# cxxql

./: CMakeLists.txt  README.md  appveyor.yml  travis.yml
.github/workflows/: cmake.yml
cmake/: packages.cmake
cmake/scheme/: basic_target_setting.cmake  test.cmake
src/: cxxql.hpp
src/avalon/: defer.hpp  lexical_cast.hpp  tuple.hpp
src/avalon/integer_sequence/: push_front.hpp
src/avalon/macro/: foreach.hpp  has_mem.hpp  n_args.hpp
src/avalon/mp/: identity.hpp
src/avalon/tuple/: trans.hpp  unique.hpp
src/cxxql/: db.hpp  exec.hpp  expr.hpp  ext.hpp  table.hpp  to_sql.hpp  type.hpp
src/cxxql/exec/: dataset_range.hpp
src/cxxql/expr/: bin_expr.hpp  col_design.hpp  condition.hpp  create_table.hpp  delete_from.hpp  drop_table.hpp  insert.hpp  insert_into.hpp  select.hpp  table.hpp  table_var.hpp  update.hpp  utils.hpp
src/cxxql/ext/: create_table_if_not_exists.hpp  drop_table_if_exists.hpp
src/cxxql/to_sql/: bin_expr.hpp  create_table.hpp  delete_from.hpp  drop_table.hpp  insert_into.hpp  select.hpp  type.hpp  update.hpp  utils.hpp
src/cxxql/utils/: typelist.hpp
src/cxxqldb/: injection.hpp  postgresql.hpp  sqlite.hpp
src/cxxqldb/postgresql/: config.hpp  connection.hpp  dataset_range.hpp  injection.hpp  utils.hpp
src/test/avalon/tuple/: unique_test.cpp
src/test/cxxql/: dummy_db.hpp  exec_test.cpp  tab_article.hpp  tab_user.hpp  table_test.cpp  to_sql_test.cpp  utils_test.cpp
src/test/cxxql/expr/: condition_test.cmake  condition_test.cpp  select_test.cpp  (+2 more)
src/test/cxxqldb/: common_test.h  postgresql_test.cmake  postgresql_test.cpp  sqlite_test.cmake  sqlite_test.cpp
(+1 files in other folders)
